# declaratest

./: .gitignore  Cargo.toml  Declaratest.slnx  GUI_SPECIFICATIONS.md  README.md  SUMMARY.md  UPDATE_NOTES.md  declaratest.py  default.docx  final_test.docx  sample.md  sample_fixed.docx  sample_output.docx  sample_test.docx  test_exact_example.md  test_legacy_oral.docx  test_legacy_oral.md  test_oral.docx  test_rust.docx  user_example.md  verify_docx.py
Declaratest.Gui/: App.xaml  App.xaml.cs  Declaratest.Gui.csproj
Declaratest.Gui/Helpers/: RelayCommand.cs
Declaratest.Gui/Models/: TestData.cs
Declaratest.Gui/Resources/Styles/: AppStyles.xaml
Declaratest.Gui/Services/: DocxGenerator.cs  FileService.cs  IDocxGenerator.cs  IFileService.cs  IMarkdownParser.cs  IPreviewService.cs  MarkdownParser.cs  WordInteropPreviewService.cs
Declaratest.Gui/ViewModels/: MainViewModel.cs
Declaratest.Gui/Views/: MainWindow.xaml  MainWindow.xaml.cs
src/: generator.rs  main.rs  parser.rs  template.rs  types.rs
