[package]
name = "declaratest"
version = "0.1.0"
edition = "2021"

[dependencies]
docx-rs = "0.4"
docx-rust = { git = "https://github.com/NiceneNerd/docx-rust", branch = "master" }
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
